# augmented_manipulation_msgs

./: CMakeLists.txt  README.md  package.xml
action/: AugmentedPickup.action
msg/: AugmentedPickupQuery.msg  GraspConfigSet.msg  GroupConfig.msg
