<package>

  <name>augmented_manipulation_msgs</name>
  <version>0.0.3</version>
  <description>
    Messages for telling augmented_manipulation to grasp on object.
  </description>
  <author>Luca Lach</author>
  <maintainer email="llach@techfak.uni-bielefeld.de">Luca Lach</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>

</package>
